# QueenGame

./: .gitignore  CMakeLists.txt
extlibs/SFML/: libsfml-audio.so.2.4.1  libsfml-audio.so.2.4.2  libsfml-network.so.2.4.1  libsfml-network.so.2.4.2  libsfml-window.so.2.4.2
extlibs/TGUI/: libtgui.so.0.7.4
extlibs/Win32/lib/BOOST/: libboost_filesystem-vc140-mt-1_63.lib  libboost_system-vc140-mt-1_63.lib
extlibs/lib/SFML/: libsfml-system.so.2.4
include/GameObjects/: Board.hpp  Cell.hpp  Queen.hpp
include/GameSystem/: MusicPlayer.hpp  ResourceManager.hpp  Settings.hpp
include/Logic/: EventHandler.hpp  Game.hpp
include/Logic/PlayersSystem/: Bot.hpp  PlayArbiter.hpp  Player.hpp
include/ResourceManagment/: ResourceManager.hpp
include/SceneManagment/: SceneManager.hpp
include/SceneManagment/Scenes/: AboutScene.hpp  PauseScene.hpp  PlayScene.hpp  PrePlayScene.hpp  Scene.hpp  SettingsScene.hpp  StartScene.hpp
lib/BOOST/: libboost_system.so.1.63.0
lib/Boost/: libboost_filesystem.so.1.63.0
linux_build/: CMakeLists.txt
media/GUITheme/: BabyBlue.txt
sources/: Cell.cpp  Cell.hpp  ChessBoard.cpp  ChessBoard.hpp  EventHandler.cpp  EventHandler.hpp  Game.cpp  Game.hpp  MoveHandler.cpp  MoveHandler.hpp  PlayScene.cpp  Queen.cpp  Queen.hpp  ResourceManager.hpp  Settings.cpp  Settings.hpp  main.cpp
sources/GameObjects/: Board.cpp  Board.hpp  Cell.cpp  Cell.hpp  Queen.cpp  Queen.hpp
sources/GameSystem/: Settings.cpp  Settings.hpp
sources/Graphics/: Board.cpp  Board.hpp  Cell.cpp  Cell.hpp  PlayScene.cpp  PlayScene.hpp  Queen.cpp  Queen.hpp
sources/Logic/: EventHandler.cpp  EventHandler.hpp  Game.cpp  Game.hpp  SceneManager.cpp  SceneManager.hpp  main.cpp
sources/PlayersSystem/: Bot.cpp  Bot.hpp  PlayArbiter.cpp  PlayArbiter.hpp  Player.cpp  Player.hpp
sources/ResourceManagment/: #TextureManager.hpp#  ResourceHolder.hpp  ResourceLoader.hpp  ResourceManager.cpp  ResourceManager.hpp  TextureLoader.cpp  TextureLoader.hpp  TextureManager.cpp  TextureManager.hpp
sources/SceneManagment/: PlaySceneManager.cpp  PlaySceneManager.hpp  SceneManager.cpp  SceneManager.hpp  StartSceneManager.cpp  StartSceneManager.hpp
sources/SceneManagment/Scenes/: EndScene.cpp  EndScene.hpp  PauseScene.cpp  PauseScene.hpp  PlayScene.cpp  PlayScene.hpp  PrePlayScene.cpp  PrePlayScene.hpp  Scene.hpp  SettingsScene.cpp  SettingsScene.hpp  StartScene.cpp  StartScene.hpp
sources/Scenes/: PlayScene.cpp  PlayScene.hpp  PlaySceneManager.hpp  Scene.hpp  SettingsScene.cpp  SettingsScene.hpp  StartScene.cpp  StartScene.hpp  StartSceneManager.cpp  StartSceneManager.hpp
sources/include/GameObjects/: Board.hpp  Cell.hpp  Queen.hpp
sources/include/GameSystem/: Settings.hpp
sources/include/Logic/: Game.hpp
sources/include/PlayersSystem/: Bot.hpp  Player.hpp
sources/include/ResourceManagment/: ResourceManager.hpp
sources/include/SceneManagment/: SceneManager.hpp
sources/include/SceneManagment/Scenes/: EndScene.hpp  PauseScene.hpp  PlayScene.hpp  PrePlayScene.hpp  Scene.hpp  SettingsScene.hpp  StartScene.hpp
sources/src/GameObjects/: Board.cpp  Cell.cpp  Queen.cpp
sources/src/GameSystem/: Settings.cpp
sources/src/Logic/: EventHandler.cpp  Game.cpp  main.cpp
sources/src/PlayersSystem/: Bot.cpp  PlayArbiter.cpp  Player.cpp
sources/src/ResourceManagment/: ResourceManager.cpp
sources/src/SceneManagment/: SceneManager.cpp
sources/src/SceneManagment/Scenes/: PlayScene.cpp  PrePlayScene.cpp  SettingsScene.cpp
src/GameObjects/: Board.cpp  Cell.cpp  Queen.cpp
src/GameSystem/: MusicPlayer.cpp  ResourceManager.cpp  Settings.cpp
src/Logic/: EventHandler.cpp  Game.cpp  main.cpp
src/Logic/PlayersSystem/: Bot.cpp  PlayArbiter.cpp  Player.cpp
src/PlayersSystem/: #Bot.cpp#  Bot.cpp  PlayArbiter.cpp
src/ResourceManagment/: ResourceManager.cpp
src/SceneManagment/: SceneManager.cpp
src/SceneManagment/Scenes/: AboutScene.cpp  EndScene.cpp  PauseScene.cpp  PlayScene.cpp  PrePlayScene.cpp  SettingsScene.cpp  StartScene.cpp
win32_proj/: QueenMove.sln
win32_proj/QueenMove_v2/: QueenMove_v2.vcxproj  QueenMove_v2.vcxproj.filters
win32_proj/QueenMove_v2/Release/QueenMove.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  QueenMove.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
